--- a/advicegenerator.css
+++ b/advicegenerator.css
@@ -47,3 +47,10 @@
 }
 
 /* End Neutral Colors */
+
+.attribution { 
+    font-size: 11px; text-align: center; 
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
