--- a/advicegenerator.css
+++ b/advicegenerator.css
@@ -13,8 +13,8 @@
 }
 
 .container {
+    height: 95vh;
     display: flex;
-    height: 100vh;
     justify-content: center;
     align-items: center;
 }
@@ -33,6 +33,10 @@
 
 .fs-28 {
     font-size: 28px;
+}
+
+.center {
+    text-align: center;
 }
 
 /* End Font / Test */
