--- a/advicegenerator.css
+++ b/advicegenerator.css
@@ -12,12 +12,19 @@
     margin: 0;
 }
 
+body {
+    background-color:hsl(217, 19%, 24%);
+}
+
 .container {
     height: 95vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+
+
 /* Font / Text */
 .manrope {
     font-family: 'Manrope', sans-serif;
