--- a/advicegenerator.css
+++ b/advicegenerator.css
@@ -4,6 +4,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap');
 
+:root {
+    --neon-green: hsl(150, 100%, 66%);
+    --light-cyan: hsl(193, 38%, 86%);
+    --grayish-blue: hsl(218, 33%, 29%);
+    --dark-grayish-blue: hsl(220, 36%, 20%);
+}
+
 *,
 *::before,
 *::after {
@@ -13,14 +20,40 @@
 }
 
 body {
-    background-color:hsl(217, 19%, 24%);
+    background-color: hsl(220, 36%, 20%);
 }
+
+img {
+    width: 100%;
+} 
 
 .container {
     height: 95vh;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.advice__container {
+    background-color: hsl(218, 33%, 29%);
+    padding: 3em;
+    margin-left: 1em;
+    margin-right: 1em;
+    border-radius: 10px;
+}
+
+.neon-green {
+    color: hsl(150, 100%, 66%);
+}
+
+.light-cyan {
+    color: hsl(193, 38%, 86%);
+}
+
+i {
+    border-radius: 100px;
+    padding: .75em;
+    background-color:hsl(150, 100%, 66%);
 }
 
 
@@ -48,29 +81,7 @@ body {
 
 /* End Font / Test */
 
-/* Primary Colors */
-
-.light-cyan {
-    color: hsl(193, 38%, 86%);
-}
-
-.neon-green {
-    color: hsl(150, 100%, 66%);
-}
-
-/* End Primary Colors */
-
-/* Neutral Colors */
-
-.grayish-blue {
-    color: hsl(217, 19%, 38%);
-}
-
-.dark-grayish-blue {
-    color: hsl(217, 19%, 24%);
-}
-
-/* End Neutral Colors */
+/* Footer */
 
 .attribution { 
     font-size: 11px; text-align: center; 
