--- a/advicegenerator.css
+++ b/advicegenerator.css
@@ -24,7 +24,7 @@ body {
 }
 
 img {
-    width: 100%;
+    max-width: 100%;
 } 
 
 .container {
@@ -57,14 +57,45 @@ i {
     size: 64px;
 }
 
+/* Button Styles */
 
 .btn {
     border-radius: 100px;
-    padding: .75em;
-    background-color:hsl(150, 100%, 66%);
+    padding: 0.75em;
+    background-color: hsl(150, 100%, 66%);
     border-color: transparent;
-    transform: translateY(135%);
-}
+    transform: translateY(50%);
+    cursor: pointer;
+  }
+  
+  .btn::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: hsl(150, 100%, 66%);
+    /*
+    transition: .5s;
+    */
+    transform: scale(0.9);
+    z-index: -1;
+  }
+  
+  .btn:hover::before {
+    transform: scale(1.1);
+    box-shadow: 0 0 15px hsl(150, 100%, 66%);
+  }
+  
+  .btn:hover {
+    backgroun: hsl(150, 100%, 66%);
+    box-shadow: 0 0 20px hsl(150, 100%, 66%);
+    text-shadow: 0 0 20px hsl(150, 100%, 66%);
+  }
+
+/* Button Styles End */
 
 
 /* Font / Text */
