--- a/advicegenerator.css
+++ b/advicegenerator.css
@@ -57,47 +57,6 @@ i {
     size: 64px;
 }
 
-/* Button Styles */
-
-.btn {
-    border-radius: 100px;
-    padding: 0.75em;
-    background-color: hsl(150, 100%, 66%);
-    border-color: transparent;
-    transform: translateY(50%);
-    cursor: pointer;
-  }
-  
-  .btn::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background: hsl(150, 100%, 66%);
-    /*
-    transition: .5s;
-    */
-    transform: scale(0.9);
-    z-index: -1;
-  }
-  
-  .btn:hover::before {
-    transform: scale(1.1);
-    box-shadow: 0 0 15px hsl(150, 100%, 66%);
-  }
-  
-  .btn:hover {
-    backgroun: hsl(150, 100%, 66%);
-    box-shadow: 0 0 20px hsl(150, 100%, 66%);
-    text-shadow: 0 0 20px hsl(150, 100%, 66%);
-  }
-
-/* Button Styles End */
-
-
 /* Font / Text */
 .manrope {
     font-family: 'Manrope', sans-serif;
@@ -123,7 +82,52 @@ i {
     text-align: center;
 }
 
-/* End Font / Test */
+.uppercase {
+    text-transform: uppercase;
+}
+
+/* Font / Text End */
+
+/* Button Styles */
+
+.btn {
+    border-radius: 100px;
+    padding: 0.75em;
+    background-color: hsl(150, 100%, 66%);
+    border-color: transparent;
+    transform: translateY(50%);
+    cursor: pointer;
+}
+  
+.btn::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: hsl(150, 100%, 66%);
+    /*
+    transition: .5s;
+    */
+    transform: scale(0.9);
+    z-index: -1;
+}
+  
+.btn:hover::before {
+    transform: scale(1.1);
+    box-shadow: 0 0 15px hsl(150, 100%, 66%);
+}
+  
+.btn:hover {
+    background: hsl(150, 100%, 66%);
+    box-shadow: 0 0 20px hsl(150, 100%, 66%);
+    text-shadow: 0 0 20px hsl(150, 100%, 66%);
+}
+
+/* Button Styles End */
+
 
 /* Footer */
 
@@ -133,6 +137,3 @@ i {
 .attribution a { 
     color: hsl(228, 45%, 44%); 
 }
-
-
-const reloadButton = document.querySelector("button#reload")
